--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title>EMIPSUM</title>
+    <!-- Bookform widget --><script>(function (w,d,s,o,f,js,fjs){w['BookformObject']=o;w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};js=d.createElement(s),fjs=d.getElementsByTagName(s)[0];js.id=o;js.src=f;js.async=1;fjs.parentNode.insertBefore(js,fjs);}(window,document,'script','Bookform','https://widget.bookform.ru/876/js'));</script><!-- End Bookform widget -->
   </head>
   <body>
     <header>
@@ -75,7 +76,7 @@
         </div>
       </div>
       <div class="container content-container header-slider">
-        <div class="header-carousel">
+        <div class="header-carousel is-hidden">
           <div>
             <ul class="header-carousel-item view">
               <li class="header-carousel-item-icon"><i id="social-vk" class="fab fa-vk fa-2x social"></i></li>
@@ -162,7 +163,7 @@
         </div>
       </div>
       <div class="container hr-header"></div>
-      <div class="container view-mobile is-hidden-tablet">
+      <div class="container view-mobile ">
         <!-- <div class="view-mobile-hr"></div> -->
         <span class="view-mobile-title">Что о нас говорят?</span>
         <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хорор квеста наследие</span>
@@ -253,7 +254,7 @@
       </div>
     </section>
     <section class="booking-body">
-      <span>БРОНИРОВАНИЕ</span>
+      <div id="bookform-embedded-widget-876"></div><script>Bookform('embedded',{id:876});</script>
     </section>
     <section class="section more-info">
       <div class="container content-container more-info-inner">
