--- a/index.html
+++ b/index.html
@@ -180,20 +180,20 @@
           <div class="column is-two-fifths about-left-column">
             <span class="about-text-title is-hidden-mobile">О проекте</span>
             <span class="about-text-description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+              Развлекаясь на западном побережье США, вы вместе со своими друзьями попадаете в таверну, которая помимо выпивки может предложить вам лично посмотреть на орудия пыток, что помогали своим сумасшедшим хозяевам доводить их несчастных жертв до настоящего отчаяния. Братья Чессепик, кому и была посвящена таверна, орудовали в прошлом, еще во времена гражданской войны. Это событие оказало им настоящую услугу в их кровавом ремесле и позже список жертв двух братьев был настолько велик, что их было почти невозможно сосчитать. Вы решили немного выпить. После этого, на утро вы вновь обнаруживаете себя в этой необычной таверне, а все события, что происходили вчера зеркальным образом повторяются вновь. Вскоре вы узнаете, что оказались в самом настоящем чистилище, где братья Чессепик продолжают свое нечестивое дело и по сей день. Крепчайте, ибо чтобы выбраться из этого ужасного места вам придется столкнуться с ними лицом к лицу...
             </span>
             <div class="about-hr about-hr-mobile is-hidden-tablet"></div>
           </div>
           <div class="column about-right-column">
             <div class="plyr__video-embed" id="player">
-              <iframe
-                  id="yt-player"
-                  src="https://www.youtube.com/embed/tIoF9SMzYco?origin=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"
-                  allowfullscreen
-                  allowtransparency
-                  allow="autoplay"
-              ></iframe>
+              <!--<iframe-->
+                  <!--id="yt-player"-->
+                  <!--src="https://www.youtube.com/embed/tIoF9SMzYco?origin=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"-->
+                  <!--allowfullscreen-->
+                  <!--allowtransparency-->
+                  <!--allow="autoplay"-->
+              <!--&gt;</iframe>-->
+              <iframe src="//vk.com/video_ext.php?oid=10707035&id=456239593&hash=683c726018eb4aab&hd=3" width="1280" height="720" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </div>
