--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="more-views">
               <div class="container view-mobile is-hidden-mobile">
                 <span class="view-mobile-title">Что о нас говорят?</span>
-                <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хорор квеста наследие</span>
+                <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
                 <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
               </div>
             </div>
@@ -166,7 +166,7 @@
       <div class="container view-mobile ">
         <!-- <div class="view-mobile-hr"></div> -->
         <span class="view-mobile-title">Что о нас говорят?</span>
-        <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хорор квеста наследие</span>
+        <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
         <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
         <div class="view-mobile-vr"></div>
       </div>
@@ -250,7 +250,7 @@
       <div class="container booking-header-inner">
         <span class="booking-header-inner-title is-hidden-mobile">Забронируйте квест хоррор</span>
         <span class="booking-header-inner-title-mobile is-hidden-tablet">Забронируйте квест</span>
-        <span class="booking-header-inner-description">Стоимость игры для команды 1-4 игрока составляет 7000, доплата за каждого дополнительного участника по 1000</span>
+        <span class="booking-header-inner-description">Стоимость игры для команды составляет от 5000₽, доплата за каждого дополнительного участника по 1000₽</span>
       </div>
     </section>
     <section class="booking-body">
@@ -281,41 +281,43 @@
         <div class="columns">
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Стиль одежды</span>
-            <span class="restrictions-column-description-mobile is-hidden-tablet">Мы настоятельно рекомендуем одеться в простую, свободную одежду для активных действий.</span>
-            <span class="restrictions-column-description is-hidden-mobile">Для вашего удобства мы настоятельно рекомендуем одеться в простую, свободную одежду для активных действий. Прохождение квеста в обуви на каблуках строго запрещено - это может страть причиной травмы</span>
+            <span class="restrictions-column-title">Удобная одежда</span>
+            <span class="restrictions-column-description-mobile is-hidden-tablet">Для вашей безопасности и комфорта лучше одевайте на квесты свободную одежду. Прохождение игры в неудобных нарядах запрещено, так как может причинить вред Вашему здоровью.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Для вашей безопасности и комфорта лучше одевайте на квесты свободную одежду. Прохождение игры в неудобных нарядах запрещено, так как может причинить вред Вашему здоровью.</span>
           </div>
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Ценные вещи</span>
-            <span class="restrictions-column-description-mobile is-hidden-tablet">Проносить электроприборы, включая мобильные телефоны, ценные вещи и украшения на квест строго запрещено. Организаторы не несут ответственности за их повреждение.</span>
-            <span class="restrictions-column-description is-hidden-mobile">Проносить электроприборы, включая мобильные телефоны, ценные вещи и украшения на квест строго запрещено. Организаторы не несут ответственность за их повреждение, потерю или дефекты, а также причинения вреда здоровью участников или актеров этими предметами</span>
+            <span class="restrictions-column-title">Личные вещи</span>
+            <span class="restrictions-column-description-mobile is-hidden-tablet">Не рекомендуется проносить на игру мобильные телефоны и другие электроприборы. В случае нарушения, администрация не несет ответственности за их потерю, дефекты и возможные травмы актеров/участников.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Не рекомендуется проносить на игру мобильные телефоны и другие электроприборы. В случае нарушения, администрация не несет ответственности за их потерю, дефекты и возможные травмы актеров/участников.</span>
           </div>
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Алкоголь</span>
-              <span class="restrictions-column-description-mobile is-hidden-tablet">Игроки, находящиеся в состоянии алкогольного или наркотического опьянения, к прохождению квеста не допускаются.</span>
-            <span class="restrictions-column-description is-hidden-mobile">Игроки, находящиеся в состоянии алкогольного или наркотического опьянения, к прохождению квеста не допускаются. В случае укрытия этого факта огранизаторы не несут за все последующие физические последствия, связанные со здоровьем и жизнью игрока</span>
+            <span class="restrictions-column-title">Нетрезвое состояние</span>
+              <span class="restrictions-column-description-mobile is-hidden-tablet">Мы не допускаем к игре игроков, которые пришли в состоянии алкогольного или наркотического опьянения.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Мы не допускаем к игре игроков, которые пришли в состоянии алкогольного или наркотического опьянения.</span>
           </div>
         </div>
         <div class="columns">
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Очки и контактные линзы</span>
-            <span class="restrictions-column-description-mobile is-hidden-tablet">Организаторы не несут ответственности за их повреждение, потерю или дефекты, а также причинение вреда здоровью участников или актеров этими предметами</span>
-            <span class="restrictions-column-description is-hidden-mobile">Мы не рекомендуем прохождение квеста в очках. Организаторы не несут ответственности за их повреждение, потерю или дефекты, а также причинение вреда здоровью участников или актеров этими предметами. По возможности искользуйте одноразовые контактные линзы.</span>
+            <span class="restrictions-column-title">Очки</span>
+            <span class="restrictions-column-description-mobile is-hidden-tablet">Не рекомендуется проходить квест в очках. Администраторы не несут ответственность за их потерю или дефект. Обращаем ваше внимание, что лучше для прохождения игры использовать одноразовые линзы.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Не рекомендуется проходить квест в очках. Администраторы не несут ответственность за их потерю или дефект. Обращаем ваше внимание, что лучше для прохождения игры использовать одноразовые линзы.</span>
           </div>
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Медицинские противопоказания</span>
-            <span class="restrictions-column-description-mobile is-hidden-tablet">Беременность, ограниченные физические возможности, травмы, болезни сердца и психологические расстройства (панические атаки, клаустрофобия, эпилепсия и др.) являются аболютным провивопоказанием к прохождению квеста</span>
-            <span class="restrictions-column-description is-hidden-mobile">Беременность, ограниченные физические возможности, травмы, болезни сердца и психологические расстройства (панические атаки, клаустрофобия, эпилепсия и др.) являются аболютным провивопоказанием к прохождению квеста</span>
+            <span class="restrictions-column-title">Противопоказания</span>
+            <span class="restrictions-column-description-mobile is-hidden-tablet">Игра не рекомендуется для лиц, имеющих медицинские противопоказания для нахождения в замкнутом пространстве в условиях повышенного эмоционального-психического напряжения, в том числе хронические заболевания сердечно-сосудистой системы и нервно-психические расстройства. Также запрещается проходить квест в состоянии беременности.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Игра не рекомендуется для лиц, имеющих медицинские противопоказания для нахождения в замкнутом пространстве в условиях повышенного эмоционального-психического напряжения, в том числе хронические заболевания сердечно-сосудистой системы и нервно-психические расстройства. Также запрещается проходить квест в состоянии беременности.</span>
           </div>
           <div class="column">
             <div class="restrictions-redpoint is-hidden-mobile"></div>
-            <span class="restrictions-column-title">Контакт с актерами</span>
-            <span class="restrictions-column-description-mobile is-hidden-tablet">Помните, что любой обраный контакт с актерами строго запрещен. Если вы проходите квест впервые, настоятельно рекомендуем выбрать режим с минимальным контактом.</span>
-            <span class="restrictions-column-description is-hidden-mobile">Пожалуйста, будьте внимательны в ходе игры, соблюдайте рекомендации оператора и элементарные правила техники безопасности. Помните, что любой обратный контакт с актерами строго запрещен. Если вы проходите квест впервые, настоятельно рекомендуем выбрать режим с минимальным контактом</span>
+            <span class="restrictions-column-title">Игра актеров и реквизит</span>
+            <span class="restrictions-column-description-mobile is-hidden-tablet">Напоминаем, что любое физическое действие с актерами, которое может привести к их травмированную, запрещено. А грубое сопротивление - завершение игры.
+Также просим вас не ломать реквизиты. Помните, все, что должно открыться, откроется легко.</span>
+            <span class="restrictions-column-description is-hidden-mobile">Напоминаем, что любое физическое действие с актерами, которое может привести к их травмированную, запрещено. А грубое сопротивление - завершение игры.
+Также просим вас не ломать реквизиты. Помните, все, что должно открыться, откроется легко.</span>
           </div>
         </div>
       </div>
