--- a/index.html
+++ b/index.html
@@ -44,16 +44,13 @@
 
             </div>
             <div class="navbar-end">
-              <a href="#" class="navbar-item is-active">Главная</a>
-              <a href="#" class="navbar-item">О нас</a>
-              <a href="#" class="navbar-item">Сеансы</a>
-              <a href="#" class="navbar-item">Цены</a>
-              <a href="#" class="navbar-item">Контакты</a>
-              <p class="navbar-item is-hidden-touch tel-number">+7 901 429 90 39</p>
+              <a href="#about" class="navbar-item">О нас</a>
+              <a href="#booking" class="navbar-item">Сеансы</a>
+              <a href="#contact-us" class="navbar-item">Контакты</a>
+              <p class="navbar-item is-hidden-touch tel-number">+79366660401</p>
               <div class="container navbar-item is-hidden-touch" id="nav-soc-icons">
                 <div class="text-center center-block">
-                  <a href="https://www.facebook.com/bootsnipp"><i id="social-vk" class="fab fa-vk fa-2x social"></i></a>
-    	            <a href="https://twitter.com/bootsnipp"><i id="social-globe" class="fas fa-globe fa-2x social"></i></a>
+                  <a href="https://vk.com/quest_chasovye_nochi"><i id="social-vk" class="fab fa-vk fa-2x social"></i></a>
                 </div>
               </div>
             </div>
@@ -64,14 +61,13 @@
         <div class="columns">
           <div class="column is-three-quarters">
             <ul class="header-title">
-              <li class="first-level-title">Orem ipsum</li>
-              <li class="second-level-title">Emipsum</li>
-              <li class="third-level-title">Ofhigh</li>
-              <li class="fourth-level-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</li>
+              <li class="first-level-title"></li>
+              <li class="second-level-title">Часовые ночи</li>
+              <li class="third-level-title">Масштабный, динамический хоррор квест с элементами иммерсивного театра</li>
             </ul>
           </div>
           <div class="column">
-            <a class="button red-btn cta-header is-rounded">Забронировать сеанс</a>
+            <a class="button red-btn cta-header is-rounded" href="#booking">Забронировать сеанс</a>
           </div>
         </div>
       </div>
@@ -91,7 +87,7 @@
               <div class="container view-mobile is-hidden-mobile">
                 <span class="view-mobile-title">Что о нас говорят?</span>
                 <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
-                <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
+                <a class="button is-link is-inverted is-outlined view-mobile-btn" href="#reviews">Почитать отзывы&#160;&#160;&#10230;</a>
               </div>
             </div>
           </div>
@@ -167,11 +163,11 @@
         <!-- <div class="view-mobile-hr"></div> -->
         <span class="view-mobile-title">Что о нас говорят?</span>
         <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
-        <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
+        <a class="button is-link is-inverted is-outlined view-mobile-btn" href="#reviews">Почитать отзывы&#160;&#160;&#10230;</a>
         <div class="view-mobile-vr"></div>
       </div>
     </header>
-    <section class="section about">
+    <section class="section about" id="about">
 
       <span class="about-uptitle-mobile is-hidden-tablet">Что такое квест наследие</span>
       <span class="about-title-mobile is-hidden-tablet">О проекте наследие</span>
@@ -200,7 +196,7 @@
         </div>
         <div class="about-hr is-hidden-mobile"></div>
         <div class= "cta-about-btn">
-          <a class="button red-btn cta-about is-rounded is-hidden-mobile">Забронировать сеанс</a>
+          <a class="button red-btn cta-about is-rounded is-hidden-mobile" href="#booking">Забронировать сеанс</a>
         </div>
       </div>
     </section>
@@ -246,7 +242,7 @@
         </div>
       </div>
     </section>
-    <section class="section booking">
+    <section class="section booking" id="booking">
       <div class="container booking-header-inner">
         <span class="booking-header-inner-title is-hidden-mobile">Забронируйте квест хоррор</span>
         <span class="booking-header-inner-title-mobile is-hidden-tablet">Забронируйте квест</span>
@@ -264,7 +260,7 @@
             <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 901 429 90 39</b></span>
           </div>
           <div class="column">
-            <a class="button red-btn cta-more-info is-rounded">Забронировать сеанс</a>
+            <a class="button red-btn cta-more-info is-rounded" href="#booking">Забронировать сеанс</a>
           </div>
         </div>
       </div>
@@ -322,7 +318,7 @@
         </div>
       </div>
     </section>
-    <section class="section reviews">
+    <section class="section reviews" id="reviews">
       <div class="reviews-vl"></div>
       <span class="reviews-uptitle is-hidden-tablet">Ваши отзывы</span>
       <span class="reviews-title is-hidden-mobile"><b>Отзывы</b> о хоррор квесте наследие</span>
@@ -357,7 +353,7 @@
         <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item-out"><h3 class="reviews-carousel-item-link">Больше отзывов</h3></div></a>
       </div>
     </section>
-    <section class="section contact-us">
+    <section class="section contact-us" id="contact-us">
       <div class="container content-container">
         <div class="contact-us-vl"></div>
         <span class="contact-us-title">Свяжитесь с нами</span>
@@ -446,6 +442,15 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        var $page = $('html, body');
+        $('a[href*="#"]').click(function() {
+            $page.animate({
+                scrollTop: $($.attr(this, 'href')).offset().top
+            }, 1500);
+            return false;
+        });
+    </script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/plyr.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
