--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://www.facebook.com/bootsnipp"><i id="social-vk" class="fab fa-vk social"></i></a>
               </div>
             </div>
-            <p class="navbar-item is-hidden-desktop tel-number is-right">+78005553535</p>
+            <p class="navbar-item is-hidden-desktop tel-number is-right">+7 (936) 666-04-01</p>
           </div>
           <div id="navMenu" class="navbar-menu">
             <div class="navbar-start">
@@ -47,7 +47,7 @@
               <a href="#about" class="navbar-item">О нас</a>
               <a href="#booking" class="navbar-item">Сеансы</a>
               <a href="#contact-us" class="navbar-item">Контакты</a>
-              <p class="navbar-item is-hidden-touch tel-number">+79366660401</p>
+              <p class="navbar-item is-hidden-touch tel-number">+7 (936) 666-04-01</p>
               <div class="container navbar-item is-hidden-touch" id="nav-soc-icons">
                 <div class="text-center center-block">
                   <a href="https://vk.com/quest_chasovye_nochi"><i id="social-vk" class="fab fa-vk fa-2x social"></i></a>
@@ -169,8 +169,7 @@
     </header>
     <section class="section about" id="about">
 
-      <span class="about-uptitle-mobile is-hidden-tablet">Что такое квест наследие</span>
-      <span class="about-title-mobile is-hidden-tablet">О проекте наследие</span>
+      <span class="about-title-mobile is-hidden-tablet">О проекте<br> часовые ночи</span>
       <div class="container content-container">
         <div class="columns">
           <div class="column is-two-fifths about-left-column">
@@ -256,8 +255,8 @@
       <div class="container content-container more-info-inner">
         <div class="columns">
           <div class="column is-three-quarters">
-            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по номеру&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>+7 901 429 90 39</b></span>
-            <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 901 429 90 39</b></span>
+            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по номеру&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>+7 (936) 666-04-01</b></span>
+            <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 (936) 666-04-01</b></span>
           </div>
           <div class="column">
             <a class="button red-btn cta-more-info is-rounded" href="#booking">Забронировать сеанс</a>
@@ -436,7 +435,7 @@
             <span class="footer-title">Телефон</span><br>
             <div class="footer-hr"></div><br>
             <div style="clear:both;"></div>
-            <span class="footer-description">+7 (909) 667 70 28</span>
+            <span class="footer-description">+7 (936) 666-04-01</span>
           </div>
         </div>
       </div>
