--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="container view-mobile is-hidden-mobile">
                 <span class="view-mobile-title">Что о нас говорят?</span>
                 <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
-                <a class="button is-link is-inverted is-outlined view-mobile-btn" href="#reviews">Почитать отзывы&#160;&#160;&#10230;</a>
+                <a class="button is-link is-inverted is-outlined view-mobile-btn" href="https://vk.com/topic-179130202_39753597">Почитать отзывы&#160;&#160;&#10230;</a>
               </div>
             </div>
           </div>
@@ -163,7 +163,7 @@
         <!-- <div class="view-mobile-hr"></div> -->
         <span class="view-mobile-title">Что о нас говорят?</span>
         <span class="view-mobile-subtitle">Почитать реальные отзывы от настоящих поседителей хоррор перформанса Часовые ночи</span>
-        <a class="button is-link is-inverted is-outlined view-mobile-btn" href="#reviews">Почитать отзывы&#160;&#160;&#10230;</a>
+        <a class="button is-link is-inverted is-outlined view-mobile-btn" href="https://vk.com/topic-179130202_39753597">Почитать отзывы&#160;&#160;&#10230;</a>
         <div class="view-mobile-vr"></div>
       </div>
     </header>
@@ -255,7 +255,7 @@
       <div class="container content-container more-info-inner">
         <div class="columns">
           <div class="column is-three-quarters">
-            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по номеру&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;<b>+7 (936) 666-04-01</b></span>
+            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по телефону&#160;&#160;&#160;&#160;&#160;&#160;<b>+7 (936) 666-04-01</b></span>
             <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 (936) 666-04-01</b></span>
           </div>
           <div class="column">
@@ -271,7 +271,6 @@
         <span class="restrictions-uptitle-mobile is-hidden-tablet">Меры предосторожности</span>
         <span class="restrictions-title is-hidden-mobile"><b>Ограничения,</b> меры предосторожности и рекомендации</span>
         <span class="restrictions-title-mobile is-hidden-tablet">Ограничения</span>
-        <span class="restrictions-description is-hidden-mobile">Прохождение квеста возможно только для здоровых людей с минимальной физической подготовкой</span>
         <div class="restrictions-hr is-hidden-mobile"></div>
         <div class="columns">
           <div class="column">
