--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="container content-container more-info-inner">
         <div class="columns">
           <div class="column is-three-quarters">
-            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по телефону&#160;&#160;&#160;&#160;&#160;&#160;<b>+7 (936) 666-04-01</b></span>
+            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по телефону&#160;&#160;<b>+7 (936) 666-04-01</b></span>
             <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 (936) 666-04-01</b></span>
           </div>
           <div class="column">
