--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
     <!-- Bookform widget --><script>(function (w,d,s,o,f,js,fjs){w['BookformObject']=o;w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};js=d.createElement(s),fjs=d.getElementsByTagName(s)[0];js.id=o;js.src=f;js.async=1;fjs.parentNode.insertBefore(js,fjs);}(window,document,'script','Bookform','https://widget.bookform.ru/876/js'));</script><!-- End Bookform widget -->
   </head>
   <body>
-    <header>
+    <div class="left-indicator is-hidden-mobile">
+      <ul class="left-indicator-ul">
+        <li class="left-indicator-li active">1</li>
+        <li class="left-indicator-li">2</li>
+        <li class="left-indicator-li">3</li>
+        <li class="left-indicator-li">4</li>
+        <li class="left-indicator-li">5</li>
+        <li class="left-indicator-li">6</li>
+      </ul>
+    </div>
+    <header id="header">
       <div class="video-container">
         <video autoplay muted playsinline loop id="bgVideo">
           <source src="./sources/bg.mp4" type="video/mp4">
@@ -114,7 +124,7 @@
             <div class="more-views">
               <div class="container view-mobile is-hidden-mobile">
                 <span class="view-mobile-title">Что о нас говорят?</span>
-                <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хорор квеста наследие</span>
+                <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хоррор квеста Часовые ночи</span>
                 <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
               </div>
             </div>
@@ -142,7 +152,7 @@
             <div class="more-views">
               <div class="container view-mobile is-hidden-mobile">
                 <span class="view-mobile-title">Что о нас говорят?</span>
-                <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хорор квеста наследие</span>
+                <span class="view-mobile-subtitle">Почитайте наши реальные отзывы от настоящих посетителей хоррор квеста Часовые ночи</span>
                 <a class="button is-link is-inverted is-outlined view-mobile-btn">Почитать отзывы&#160;&#160;&#10230;</a>
               </div>
             </div>
@@ -161,6 +171,10 @@
       <div class="container hr-header"></div>
     </header>
     <section class="section about" id="about">
+      <div class="about-layout">
+        <span class="top">О нас</span>
+        <span class="bottom">О нас</span>
+      </div>
       <div class="container view-mobile ">
         <!-- <div class="view-mobile-hr"></div> -->
         <span class="view-mobile-title">Что о нас говорят?</span>
@@ -242,8 +256,9 @@
       </div>
     </section>
     <section class="section booking" id="booking">
+      <div class="booking-layout"></div>
       <div class="container booking-header-inner">
-        <span class="booking-header-inner-title is-hidden-mobile">Забронируйте квест хоррор</span>
+        <span class="booking-header-inner-title is-hidden-mobile">Забронируйте хоррор квест</span>
         <span class="booking-header-inner-title-mobile is-hidden-tablet">Забронируйте квест</span>
         <span class="booking-header-inner-description">Стоимость игры для команды составляет от 5000₽, доплата за каждого дополнительного участника по 1000₽</span>
       </div>
@@ -255,7 +270,7 @@
       <div class="container content-container more-info-inner">
         <div class="columns">
           <div class="column is-three-quarters">
-            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по телефону&#160;&#160;<b>+7 (936) 666-04-01</b></span>
+            <span class="more-info-title is-hidden-mobile">Для получения информации и бронирования звоните нам по телефону&#160;&#160;&#160;<b>+7 (936) 666-04-01</b></span>
             <span class="more-info-title is-hidden-tablet">Звоните нам по номеру<br><b>+7 (936) 666-04-01</b></span>
           </div>
           <div class="column">
@@ -265,7 +280,11 @@
       </div>
     </section>
 
-    <section class="section restrictions">
+    <section class="section restrictions" id="restrictions">
+      <div class="restrictions-layout">
+        <span class="top">Огр</span>
+        <span class="bottom">аничения</span>
+      </div>
       <div class="container content-container">
         <div class="restrictions-vl is-hidden-tablet"></div>
         <span class="restrictions-uptitle-mobile is-hidden-tablet">Меры предосторожности</span>
@@ -319,7 +338,7 @@
     <section class="section reviews" id="reviews">
       <div class="reviews-vl"></div>
       <span class="reviews-uptitle is-hidden-tablet">Ваши отзывы</span>
-      <span class="reviews-title is-hidden-mobile"><b>Отзывы</b> о хоррор квесте наследие</span>
+      <span class="reviews-title is-hidden-mobile"><b>Отзывы</b> о хоррор квесте Часовые ночи</span>
       <span class="reviews-description">Что о нас пишут в соцсетях</span>
       <div class="center">
         <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item-link-out"><h3 class="reviews-carousel-item-link">Больше отзывов</h3></div></a>
@@ -419,7 +438,7 @@
           <div class="column is-one-fifth">
             <span class="footer-title">Наш адрес</span>
             <div class="footer-hr"></div>
-            <span class="footer-description">Москва, Волгоградский пр.,32 корпус 8</span>
+            <span class="footer-description">Москва, Советская улица, 80с10</span>
           </div>
           <div class="column is-one-fifth">
             <span class="footer-title">Email</span>
@@ -440,6 +459,55 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        // получаем координаты элемента в контексте документа
+        function getCoords(elem) {
+            var box = elem.getBoundingClientRect();
+
+            return {
+                top: box.top + pageYOffset,
+                left: box.left + pageXOffset
+            };
+        }
+
+        function removeClass(array,index){
+            for (var i = 0; i < 6; i++){
+                if (i != index){
+                    array[i].classList.remove('active');
+                }
+            }
+        }
+
+        window.addEventListener('scroll', function () {
+            var scrolled = window.scrollY - 300;
+            var items = document.getElementsByClassName('left-indicator-li');
+           if (scrolled < getCoords(document.getElementById('header')).top){
+               console.log('header section');
+               items[0].classList.add('active');
+               removeClass(items,0);
+           } else if (scrolled < getCoords(document.getElementById('about')).top){
+               console.log('about section');
+               items[1].classList.add('active');
+               removeClass(items,1);
+           } else if (scrolled < getCoords(document.getElementById('booking')).top){
+               console.log('booking section');
+               items[2].classList.add('active');
+               removeClass(items,2);
+           } else if (scrolled < getCoords(document.getElementById('restrictions')).top){
+               console.log('restrictions section');
+               items[3].classList.add('active');
+               removeClass(items,3);
+           } else if (scrolled < getCoords(document.getElementById('reviews')).top){
+               console.log('reviews section');
+               items[4].classList.add('active');
+               removeClass(items,4);
+           } else if (scrolled < getCoords(document.getElementById('contact-us')).top){
+               console.log('contacts section');
+               items[5].classList.add('active');
+               removeClass(items,5);
+           }
+        });
+    </script>
     <script>
         var $page = $('html, body');
         $('a[href*="#"]').click(function() {
