--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     </header>
     <section class="section about" id="about">
       <div class="about-layout">
-        <span class="top">О нас</span>
-        <span class="bottom">О нас</span>
+        <span class="top"><p>О нас</p></span>
+        <span class="bottom"><p>О нас</p></span>
       </div>
       <div class="container view-mobile ">
         <!-- <div class="view-mobile-hr"></div> -->
@@ -281,7 +281,7 @@
     </section>
 
     <section class="section restrictions" id="restrictions">
-      <div class="restrictions-layout">
+      <div class="restrictions-layout is-hodden-mobile">
         <span class="top">Огр</span>
         <span class="bottom">аничения</span>
       </div>
