--- a/index.html
+++ b/index.html
@@ -364,6 +364,9 @@
       </div>
     </section>
     <section class="section contact-us" id="contact-us">
+      <div class="map-mobile is-hidden-tablet">
+        <a href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn map-btn-mobile"><p>Проложить маршрут</p></div></a>
+      </div>
       <div class="map-layout is-hidden-mobile"></div>
       <div class="container content-container">
         <div class="contact-us-vl"></div>
@@ -423,8 +426,9 @@
               <button class="button is-text" type="submit">Отправить&#160;&#160;&#10230;</button>
             </div>
           </div>
-        </div>
+          <a href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn"><p>Проложить маршрут</p></div></a>
       </form>
+      </div>
     </section>
     <footer class="footer">
       <div class="container content-container">
