--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
               <button class="button is-text" type="submit">Отправить&#160;&#160;&#10230;</button>
             </div>
           </div>
-          <a href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn"><p>Проложить маршрут</p></div></a>
+          <a class="is-hidden-mobile" href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn"><p>Проложить маршрут</p></div></a>
       </form>
       </div>
     </section>
