--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     </section>
     <section class="section contact-us" id="contact-us">
       <div class="map-mobile is-hidden-tablet">
-        <a href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn map-btn-mobile"><p>Проложить маршрут</p></div></a>
+        <a href="https://yandex.ru/maps/-/CGSqaAml" target="_blank"><div class="map-btn map-btn-mobile"><div>Проложить маршрут</div></div></a>
       </div>
       <div class="map-layout is-hidden-mobile"></div>
       <div class="container content-container">
