--- a/index.html
+++ b/index.html
@@ -336,31 +336,31 @@
       <span class="reviews-description">Что о нас пишут в соцсетях</span>
       <div class="center">
         <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item-link-out"><h3 class="reviews-carousel-item-link">Больше отзывов</h3></div></a>
-        <div class="reviews-carousel-item">
+        <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item">
           <h3 class="reviews-carousel-item-h"></h3>
           <span class="reviews-carousel-item-name"></span>
           <span class="reviews-carousel-item-review"></span>
-        </div>
-        <div class="reviews-carousel-item">
+        </div></a>
+        <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item">
           <h3 class="reviews-carousel-item-h"></h3>
           <span class="reviews-carousel-item-name"></span>
           <span class="reviews-carousel-item-review"></span>
-        </div>
-        <div class="reviews-carousel-item">
+        </div></a>
+        <a href="https://vk.com/topic-179130202_39753597"> <div class="reviews-carousel-item">
           <h3 class="reviews-carousel-item-h"></h3>
           <span class="reviews-carousel-item-name"></span>
           <span class="reviews-carousel-item-review"></span>
-        </div>
-        <div class="reviews-carousel-item">
+        </div></a>
+        <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item">
           <h3 class="reviews-carousel-item-h"></h3>
           <span class="reviews-carousel-item-name"></span>
           <span class="reviews-carousel-item-review"></span>
-        </div>
-        <div class="reviews-carousel-item">
+        </div></a>
+        <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item">
           <h3 class="reviews-carousel-item-h"></h3>
           <span class="reviews-carousel-item-name"></span>
           <span class="reviews-carousel-item-review"></span>
-        </div>
+        </div></a>
         <a href="https://vk.com/topic-179130202_39753597"><div class="reviews-carousel-item-out"><h3 class="reviews-carousel-item-link">Больше отзывов</h3></div></a>
       </div>
     </section>
