--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width"><link rel=icon href=/favicon.ico><meta name=cmsmagazine content=c5be0d3613fab29f45730fa4856356f0><title>adverts</title><link href=/css/app.a0516581.css rel=preload as=style><link href=/css/chunk-vendors.ae2a234a.css rel=preload as=style><link href=/js/app.3c6cb38c.js rel=preload as=script><link href=/js/chunk-vendors.2129c68e.js rel=preload as=script><link href=/css/chunk-vendors.ae2a234a.css rel=stylesheet><link href=/css/app.a0516581.css rel=stylesheet></head><body><noscript><strong>We're sorry but adverts doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=ball></div><div id=app></div><script>var $ = document.querySelector.bind(document);
-        var $on = document.addEventListener.bind(document);
-
-        var xmouse, ymouse;
-        $on('mousemove', function (e) {
-            xmouse = e.clientX || e.pageX;
-            ymouse = e.clientY || e.pageY;
-        });
-
-        var ball = $('#ball');
-
-        $on("click", function(e) {
-            console.log('click');
-            e.preventDefault;
-
-            // -> removing the class
-            ball.classList.remove("animated");
-
-            // i have no idea why and how this works:
-            void ball.offsetWidth;
-
-            // -> and re-adding the class
-            ball.classList.add("animated");
-
-            //It vibrates, lol
-            navigator.vibrate(100);
-        }, false);
-
-        var x = void 0,
-            y = void 0,
-            dx = void 0,
-            dy = void 0,
-            tx = 0,
-            ty = 0,
-            key = -1;
-
-        var yscroll = 0;
-        window.onscroll = function (e) {yscroll = window.scrollY; };
-
-        var followMouse = function followMouse() {
-            key = requestAnimationFrame(followMouse);
-
-            if(!x || !y) {
-                x = xmouse;
-                y = ymouse;
-            } else {
-                dx = (xmouse - x) * 0.125;
-                dy = (ymouse - y) * 0.125;
-                if(Math.abs(dx) + Math.abs(dy) < 0.1) {
-                    x = xmouse;
-                    y = ymouse;
-                } else {
-                    x += dx;
-                    y += dy;
-                }
-            }
-            ball.style.left = x + 'px';
-            ball.style.top = (y + yscroll) + 'px';
-        };
-
-        followMouse();</script><script src=/js/chunk-vendors.2129c68e.js></script><script src=/js/app.3c6cb38c.js></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width"><link rel=icon href=/favicon.ico><meta name=cmsmagazine content=c5be0d3613fab29f45730fa4856356f0><title>adverts</title><link href=/css/app.ede16165.css rel=preload as=style><link href=/css/chunk-vendors.ae2a234a.css rel=preload as=style><link href=/js/app.f10b9610.js rel=preload as=script><link href=/js/chunk-vendors.2129c68e.js rel=preload as=script><link href=/css/chunk-vendors.ae2a234a.css rel=stylesheet><link href=/css/app.ede16165.css rel=stylesheet></head><body><noscript><strong>We're sorry but adverts doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.2129c68e.js></script><script src=/js/app.f10b9610.js></script></body></html>
